typechecker/src/snapshots/typechecker__build__tests__assign_stmt-5.snap
---
source: typechecker/src/build.rs
description: a += b
---
SymbolTable {
    symbol_table_type: Module,
    symbols: {},
    start_line_number: 0,
}
