typechecker/src/snapshots/typechecker__build__tests__assign_stmt-6.snap
---
source: typechecker/src/build.rs
description: "def f():\n   a = 1\n   return\n"
---
SymbolTable {
    scopes: [
        SymbolTableScope {
            symbol_table_type: Module,
            name: "global",
            symbols: {
                "f": SymbolTableNode {
                    name: "f",
                    declarations: [
                        Function(
                            Function {
                                declaration_path: DeclarationPath {
                                    module_name: "test",
                                    node: Node {
                                        start: 0,
                                        end: 28,
                                    },
                                },
                                function_node: FunctionDef {
                                    node: Node {
                                        start: 0,
                                        end: 28,
                                    },
                                    name: "f",
                                    args: Arguments {
                                        node: Node {
                                            start: 6,
                                            end: 6,
                                        },
                                        posonlyargs: [],
                                        args: [],
                                        vararg: None,
                                        kwonlyargs: [],
                                        kw_defaults: [],
                                        kwarg: None,
                                        defaults: [],
                                    },
                                    body: [
                                        AssignStatement(
                                            Assign {
                                                node: Node {
                                                    start: 12,
                                                    end: 17,
                                                },
                                                targets: [
                                                    Name(
                                                        Name {
                                                            node: Node {
                                                                start: 12,
                                                                end: 13,
                                                            },
                                                            id: "a",
                                                        },
                                                    ),
                                                ],
                                                value: Constant(
                                                    Constant {
                                                        node: Node {
                                                            start: 16,
                                                            end: 17,
                                                        },
                                                        value: Int(
                                                            "1",
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                        Return(
                                            Return {
                                                node: Node {
                                                    start: 18,
                                                    end: 27,
                                                },
                                                value: None,
                                            },
                                        ),
                                    ],
                                    decorator_list: [],
                                    returns: None,
                                    type_comment: None,
                                },
                                is_method: false,
                                is_generator: false,
                                return_statements: [
                                    Return {
                                        node: Node {
                                            start: 18,
                                            end: 27,
                                        },
                                        value: None,
                                    },
                                ],
                                yeild_statements: [],
                                raise_statements: [],
                            },
                        ),
                    ],
                },
            },
        },
    ],
    all_scopes: [
        SymbolTableScope {
            symbol_table_type: Function,
            name: "f",
            symbols: {
                "a": SymbolTableNode {
                    name: "a",
                    declarations: [
                        Variable(
                            Variable {
                                declaration_path: DeclarationPath {
                                    module_name: "test",
                                    node: Node {
                                        start: 12,
                                        end: 17,
                                    },
                                },
                                scope: Global,
                                type_annotation: None,
                                inferred_type_source: Some(
                                    Constant(
                                        Constant {
                                            node: Node {
                                                start: 16,
                                                end: 17,
                                            },
                                            value: Int(
                                                "1",
                                            ),
                                        },
                                    ),
                                ),
                                is_constant: false,
                            },
                        ),
                    ],
                },
            },
        },
    ],
}
