typechecker/src/snapshots/typechecker__build__tests__class_def.snap
---
source: typechecker/src/build.rs
description: "class c:\n   def __init__(self):\n        b = 1\n"
---
SymbolTable {
    scopes: [
        SymbolTableScope {
            symbol_table_type: Module,
            name: "global",
            symbols: {
                "c": SymbolTableNode {
                    name: "c",
                    declarations: [
                        Class(
                            Class {
                                declaration_path: DeclarationPath {
                                    module_name: "test",
                                    node: Node {
                                        start: 0,
                                        end: 46,
                                    },
                                },
                                methods: [
                                    "__init__",
                                ],
                            },
                        ),
                    ],
                },
            },
        },
    ],
    all_scopes: [
        SymbolTableScope {
            symbol_table_type: Function,
            name: "__init__",
            symbols: {
                "b": SymbolTableNode {
                    name: "b",
                    declarations: [
                        Variable(
                            Variable {
                                declaration_path: DeclarationPath {
                                    module_name: "test",
                                    node: Node {
                                        start: 40,
                                        end: 45,
                                    },
                                },
                                scope: Global,
                                type_annotation: None,
                                inferred_type_source: Some(
                                    Constant(
                                        Constant {
                                            node: Node {
                                                start: 44,
                                                end: 45,
                                            },
                                            value: Int(
                                                "1",
                                            ),
                                        },
                                    ),
                                ),
                                is_constant: false,
                            },
                        ),
                    ],
                },
            },
        },
        SymbolTableScope {
            symbol_table_type: Class,
            name: "c",
            symbols: {
                "__init__": SymbolTableNode {
                    name: "__init__",
                    declarations: [
                        Function(
                            Function {
                                declaration_path: DeclarationPath {
                                    module_name: "test",
                                    node: Node {
                                        start: 12,
                                        end: 46,
                                    },
                                },
                                is_method: true,
                                is_generator: false,
                                return_statements: [],
                                yeild_statements: [],
                                raise_statements: [],
                            },
                        ),
                    ],
                },
            },
        },
    ],
}
