typechecker/src/snapshots/typechecker__build__tests__create_symbol_table.snap
---
source: typechecker/src/build.rs
description: simple assignment
---
SymbolTable {
    symbol_table_type: Module,
    symbols: {
        "a": SymbolTableNode {
            name: "a",
            declarations: [
                Variable(
                    Variable {
                        declaration_path: DeclarationPath {
                            module_name: "test",
                            node: Node {
                                start: 0,
                                end: 17,
                            },
                        },
                        scope: Global,
                        type_annotation: None,
                        inferred_type_source: Some(
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 4,
                                        end: 17,
                                    },
                                    value: Str(
                                        "hello world",
                                    ),
                                },
                            ),
                        ),
                        is_constant: false,
                    },
                ),
            ],
            module_public: false,
            module_hidden: false,
            implicit: false,
            scope: Global,
        },
        "b": SymbolTableNode {
            name: "b",
            declarations: [
                Variable(
                    Variable {
                        declaration_path: DeclarationPath {
                            module_name: "test",
                            node: Node {
                                start: 18,
                                end: 27,
                            },
                        },
                        scope: Global,
                        type_annotation: None,
                        inferred_type_source: Some(
                            BinOp(
                                BinOp {
                                    node: Node {
                                        start: 22,
                                        end: 27,
                                    },
                                    op: Add,
                                    left: Name(
                                        Name {
                                            node: Node {
                                                start: 22,
                                                end: 23,
                                            },
                                            id: "a",
                                        },
                                    ),
                                    right: Constant(
                                        Constant {
                                            node: Node {
                                                start: 26,
                                                end: 27,
                                            },
                                            value: Int(
                                                "1",
                                            ),
                                        },
                                    ),
                                },
                            ),
                        ),
                        is_constant: false,
                    },
                ),
            ],
            module_public: false,
            module_hidden: false,
            implicit: false,
            scope: Global,
        },
    },
    start_line_number: 0,
}
