typechecker/src/snapshots/typechecker__build__tests__function_def_symbols.snap
---
source: typechecker/src/build.rs
description: "def func(a ,b , /, c = 2, **e): pass"
---
SymbolTable {
    scopes: [
        SymbolTableScope {
            symbol_table_type: Module,
            name: "global",
            symbols: {
                "func": SymbolTableNode {
                    name: "func",
                    declarations: [
                        Function(
                            Function {
                                declaration_path: DeclarationPath {
                                    module_name: "test",
                                    node: Node {
                                        start: 0,
                                        end: 36,
                                    },
                                },
                                function_node: FunctionDef {
                                    node: Node {
                                        start: 0,
                                        end: 36,
                                    },
                                    name: "func",
                                    args: Arguments {
                                        node: Node {
                                            start: 9,
                                            end: 29,
                                        },
                                        posonlyargs: [
                                            Arg {
                                                node: Node {
                                                    start: 9,
                                                    end: 10,
                                                },
                                                arg: "a",
                                                annotation: None,
                                            },
                                            Arg {
                                                node: Node {
                                                    start: 12,
                                                    end: 13,
                                                },
                                                arg: "b",
                                                annotation: None,
                                            },
                                        ],
                                        args: [
                                            Arg {
                                                node: Node {
                                                    start: 19,
                                                    end: 24,
                                                },
                                                arg: "c",
                                                annotation: None,
                                            },
                                        ],
                                        vararg: None,
                                        kwonlyargs: [],
                                        kw_defaults: [],
                                        kwarg: Some(
                                            Arg {
                                                node: Node {
                                                    start: 28,
                                                    end: 29,
                                                },
                                                arg: "e",
                                                annotation: None,
                                            },
                                        ),
                                        defaults: [
                                            Constant(
                                                Constant {
                                                    node: Node {
                                                        start: 23,
                                                        end: 24,
                                                    },
                                                    value: Int(
                                                        "2",
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                    body: [
                                        Pass(
                                            Pass {
                                                node: Node {
                                                    start: 32,
                                                    end: 36,
                                                },
                                            },
                                        ),
                                    ],
                                    decorator_list: [],
                                    returns: None,
                                    type_comment: None,
                                },
                                is_method: false,
                                is_generator: false,
                                return_statements: [],
                                yeild_statements: [],
                                raise_statements: [],
                            },
                        ),
                    ],
                },
            },
        },
    ],
    all_scopes: [
        SymbolTableScope {
            symbol_table_type: Function,
            name: "func",
            symbols: {
                "a": SymbolTableNode {
                    name: "a",
                    declarations: [
                        Parameter(
                            Paramter {
                                declaration_path: DeclarationPath {
                                    module_name: "test",
                                    node: Node {
                                        start: 9,
                                        end: 10,
                                    },
                                },
                                parameter_node: Arg {
                                    node: Node {
                                        start: 9,
                                        end: 10,
                                    },
                                    arg: "a",
                                    annotation: None,
                                },
                                type_annotation: None,
                                default_value: None,
                            },
                        ),
                    ],
                },
                "b": SymbolTableNode {
                    name: "b",
                    declarations: [
                        Parameter(
                            Paramter {
                                declaration_path: DeclarationPath {
                                    module_name: "test",
                                    node: Node {
                                        start: 12,
                                        end: 13,
                                    },
                                },
                                parameter_node: Arg {
                                    node: Node {
                                        start: 12,
                                        end: 13,
                                    },
                                    arg: "b",
                                    annotation: None,
                                },
                                type_annotation: None,
                                default_value: None,
                            },
                        ),
                    ],
                },
                "c": SymbolTableNode {
                    name: "c",
                    declarations: [
                        Parameter(
                            Paramter {
                                declaration_path: DeclarationPath {
                                    module_name: "test",
                                    node: Node {
                                        start: 19,
                                        end: 24,
                                    },
                                },
                                parameter_node: Arg {
                                    node: Node {
                                        start: 19,
                                        end: 24,
                                    },
                                    arg: "c",
                                    annotation: None,
                                },
                                type_annotation: None,
                                default_value: Some(
                                    Constant(
                                        Constant {
                                            node: Node {
                                                start: 23,
                                                end: 24,
                                            },
                                            value: Int(
                                                "2",
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ),
                    ],
                },
                "e": SymbolTableNode {
                    name: "e",
                    declarations: [
                        Parameter(
                            Paramter {
                                declaration_path: DeclarationPath {
                                    module_name: "test",
                                    node: Node {
                                        start: 28,
                                        end: 29,
                                    },
                                },
                                parameter_node: Arg {
                                    node: Node {
                                        start: 28,
                                        end: 29,
                                    },
                                    arg: "e",
                                    annotation: None,
                                },
                                type_annotation: None,
                                default_value: None,
                            },
                        ),
                    ],
                },
            },
        },
    ],
}
